--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -14,7 +14,7 @@ install:
 
 build_script:
     - call "C:\Program Files (x86)\Microsoft Visual Studio\2017\Community\VC\Auxiliary\Build\vcvars64.bat"
-    - make.exe msvc -j4 CXXFLAGS="/std:c++17 /W3 /I tests /I include"
+    - make.exe msvc -j4
 
 artifacts:
     - path: expected_test.exe
